--- a/meme-generator/src/App.css
+++ b/meme-generator/src/App.css
@@ -7,6 +7,9 @@ body{
   margin: 0;
 }
 
+/* The header section */
+
+
 nav{
   display: flex;
   justify-content: space-between;
@@ -29,4 +32,35 @@ nav > p{
 nav > img{
   height: 100%;
  
+}
+
+
+/* The Meme form section */
+.form--inputs{
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.meme--form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form--button{
+  width: 200px;
+  margin-top: 10px;
+  background-color: aqua;
+  border-radius: 5px;
+}
+
+.form--text{
+  border-radius: 5px;
+}
+
+.meme--image{
+  max-width: 100%;
+  margin-top: 15px;
 }
